--- a/prj-monster-01-starting-setup/index.html
+++ b/prj-monster-01-starting-setup/index.html
@@ -33,12 +33,13 @@
       <h3 v-if="winner === 'monster'">You lost!</h3>
       <h3 v-else-if="winner === 'player'">You won!</h3>
       <h3 v-else>It is a draw!</h3>
+      <button @click="startGame">Start New Game</button>
     </section>
     <section id="controls">
       <button @click="attackMonster">ATTACK</button>
       <button :disabled="mayUseSpeicalAttack" @click="specialAttackMonster">SPECIAL ATTACK</button>
       <button @click="healPlayer">HEAL</button>
-      <button>SURRENDER</button>
+      <button @click="surrender">SURRENDER</button>
     </section>
     <section id="log" class="container">
       <h2>Battle Log</h2>
