disable control after end game with v-else

--- a/prj-monster-01-starting-setup/index.html
+++ b/prj-monster-01-starting-setup/index.html
@@ -35,7 +35,7 @@
       <h3 v-else>It is a draw!</h3>
       <button @click="startGame">Start New Game</button>
     </section>
-    <section id="controls">
+    <section id="controls" v-else>
       <button @click="attackMonster">ATTACK</button>
       <button :disabled="mayUseSpeicalAttack" @click="specialAttackMonster">SPECIAL ATTACK</button>
       <button @click="healPlayer">HEAL</button>
